docs-archive/apache-airflow-providers-amazon/9.27.0/_sources/_api/airflow/providers/amazon/aws/hooks/sagemaker_unified_studio/index.rst.txt
airflow.providers.amazon.aws.hooks.sagemaker_unified_studio
===========================================================

.. py:module:: airflow.providers.amazon.aws.hooks.sagemaker_unified_studio

.. autoapi-nested-parse::

   This module contains the Amazon SageMaker Unified Studio Notebook hook.



Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.sagemaker_unified_studio.SageMakerNotebookHook


Module Contents
---------------

.. py:class:: SageMakerNotebookHook(execution_name, input_config = None, domain_id = None, project_id = None, output_config = None, domain_region = None, compute = None, termination_condition = None, tags = None, waiter_delay = 10, waiter_max_attempts = 1440, *args, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`


   Interact with Sagemaker Unified Studio Workflows.

   This hook provides a wrapper around the Sagemaker Workflows Notebook Execution API.

   Examples:
    .. code-block:: python

       from airflow.providers.amazon.aws.hooks.sagemaker_unified_studio import SageMakerNotebookHook

       notebook_hook = SageMakerNotebookHook(
           execution_name="notebook_execution",
           domain_id="dzd-example123456",
           project_id="example123456",
           input_config={"input_path": "path/to/notebook.ipynb", "input_params": {"param1": "value1"}},
           output_config={"output_uri": "folder/output/location/prefix", "output_formats": "NOTEBOOK"},
           domain_region="us-east-1",
           waiter_delay=10,
           waiter_max_attempts=1440,
       )

   :param execution_name: The name of the notebook job to be executed, this is same as task_id.
   :param domain_id: The domain ID for Amazon SageMaker Unified Studio. Optional - if not provided,
       the SDK will attempt to resolve it from the environment.
   :param project_id: The project ID for Amazon SageMaker Unified Studio. Optional - if not provided,
       the SDK will attempt to resolve it from the environment.
   :param input_config: Configuration for the input file.
       Example: {'input_path': 'folder/input/notebook.ipynb', 'input_params': {'param1': 'value1'}}
   :param output_config: Configuration for the output format. It should include an output_formats parameter to specify the output format.
       Example: {'output_formats': ['NOTEBOOK']}
   :param domain_region: The AWS region for the domain. If not provided, the default AWS region will be used.
   :param compute: compute configuration to use for the notebook execution. This is a required attribute
       if the execution is on a remote compute.
       Example::

           {
               "instance_type": "ml.c5.xlarge",
               "image_details": {
                   "image_name": "sagemaker-distribution-prod",
                   "image_version": "3",
                   "ecr_uri": "123456123456.dkr.ecr.us-west-2.amazonaws.com/ImageName:latest",
               },
           }

   :param termination_condition: conditions to match to terminate the remote execution.
       Example: ``{"MaxRuntimeInSeconds": 3600}``
   :param tags: tags to be associated with the remote execution runs.
       Example: ``{"md_analytics": "logs"}``
   :param waiter_delay: Interval in seconds to check the task execution status.
   :param waiter_max_attempts: Number of attempts to wait before returning FAILED.


   .. py:attribute:: execution_name


   .. py:attribute:: domain_id
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: domain_region
      :value: None



   .. py:attribute:: input_config


   .. py:attribute:: output_config


   .. py:attribute:: compute
      :value: None



   .. py:attribute:: termination_condition


   .. py:attribute:: tags


   .. py:attribute:: waiter_delay
      :value: 10



   .. py:attribute:: waiter_max_attempts
      :value: 1440



   .. py:method:: start_notebook_execution()


   .. py:method:: wait_for_execution_completion(execution_id, context)


